# invoice-generator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: app.py  client.py  env.py  google_drive.py  notion.py  send_email.py
src/templates/: invoice_template.html
